# ECG_tkinter_py

./: .gitignore  README.md  main.py  pyproject.toml
microScripts/ADC-slaveESP32-uart/: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini
microScripts/ADC-slaveESP32-uart/src/: main.c
microScripts/ADC-slaveESP32-uart/src/backend/: config.h  functions.txt
microScripts/ECG_Control_Arduino/: ECG_Control_Arduino.ino
src/: app.py  config.py  data_model.py  filters.py  peak_detection.py  serial_handler.py
src/algorithms/: hrv_analysis.py  pan_tompkins.py
src/cardioverter/: safety.py  state_machine.py
src/iu/: cardioverter_panel.py  graphs_panel.py  recording_panel.py
src/recording/: data_logger.py  patient_info.py  session_manager.py
