[project]
name = "ecg-tkinter-py"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyserial>=3.5",
    "pandas>=2.0.0",        # Para grabación CSV
    "h5py>=3.8.0",          # Para grabación HDF5
    "biosppy>=0.8.0",       # Para HRV análisis
]
